[tool.poetry]
name = "cipher_ljb2185"
version = "0.1.0"
description = "Python package for encrytion technicque as part of MDS class deliverables"
authors = ["Lestary J Barany"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
